--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -14,12 +14,13 @@
 @import './components/_references.scss';
 @import './components/_cta.scss';
 @import './components/_footer.scss';
-@import './components/work-chart';
+@import './components/work-box';
 @import './components/_main-hero.scss';
 
 
 //-------------------------------------------------------------lets work together section-------------------------------------------------------------    
 .lets-work{
+    padding-bottom: 2rem;
     &__title{
         color: $color-dark-green;
         margin-bottom: 1.6694rem;
@@ -29,7 +30,7 @@
         }
     }
 
-    .work-chart{
+    .work-box{
         margin-bottom: 1.25rem;
         @media screen and (min-width:768px) {
             margin-bottom: 4.25rem;
@@ -40,7 +41,7 @@
         }
     }
     
-    &__charts{
+    &__boxes{
         @media screen and (min-width:970px) {
             display: flex;
             max-width: 64.5rem;
@@ -49,13 +50,14 @@
     }
 
     .modifier{
-        p{
-            max-width: 12.125rem;
+        max-width: 9.75rem;
+        @media screen and (min-width:360px) {
+            max-width: 11.625rem;
         }
         @media screen and (min-width:800px) {
-            p{
-                max-width: 214px;
-            }
+            
+                max-width: 13.375rem;
+            
         }
     }
 }
